# DevCanvas

./: .gitignore  DevCanvas.md  README.md  design.html
api/: .env.example  pyproject.toml
api/scripts/: glm_observe.py
api/src/devcanvas_api/: __init__.py  main.py
api/src/devcanvas_api/core/: __init__.py  config.py
api/src/devcanvas_api/generations/: __init__.py  dependencies.py  router.py  schemas.py  service.py
api/src/devcanvas_api/health/: __init__.py  router.py  service.py
api/src/devcanvas_api/pipeline/: __init__.py  agents.py  dependencies.py  edit_agent.py  fixtures.py  llm.py  naming.py  orchestrator.py  schemas.py
api/src/devcanvas_api/pipeline/code/: __init__.py  generator.py  templates.py
api/src/devcanvas_api/pipeline/design/: __init__.py  exporter.py  presets.py
api/src/devcanvas_api/pipeline/handoff/: __init__.py  builder.py
api/src/devcanvas_api/pipeline/review/: __init__.py  checks.py  reviewer.py
api/src/devcanvas_api/pipeline/ui/: __init__.py  generator.py  templates.py
api/src/devcanvas_api/sessions/: __init__.py  dependencies.py  router.py  schemas.py  service.py  store.py
api/tests/: test_generations_endpoint.py  test_generations_schemas.py  test_health.py  test_main.py  test_sessions.py  test_sessions_endpoint.py
api/tests/pipeline/: test_code_generator.py  test_code_generator_agent_llm.py  test_design.py  test_edit_agent.py  test_glm_adapter.py  test_handoff.py  test_llm.py  test_orchestrator.py  test_review.py  test_ui_generator.py  test_ui_generator_agent_llm.py  test_ux_planner.py
docs/: design-brief.md  plan.md  (+1 more)
(+110 files in other folders)
